--- a/styles.css
+++ b/styles.css
@@ -260,6 +260,9 @@ section {
     -ms-flex-align: center;
     align-items: center;
 }
+.last__block {
+    width: 100%;
+}
 
 .last__block, 
 .last__wrapper {
@@ -311,6 +314,7 @@ section {
     align-items: center;
 }
 .loader {
+    position: absolute;
     width: 50px;
     height: 50px;
     border-radius: 50%;
